--- a/MDN/MDN/Views/Produto/Create.cshtml
+++ b/MDN/MDN/Views/Produto/Create.cshtml
@@ -4,10 +4,66 @@
     ViewData["Title"] = "Create";
 }
 
+<link href="~/css/fileUploadPlugin/jquery.fileupload.css" rel="stylesheet" />
+<link href="~/css/fileUploadPlugin/jquery.fileupload-ui.css" rel="stylesheet" />
+<link href="~/css/fileUploadPlugin/blueimp-gallery.css" rel="stylesheet" />
+<link href="~/css/fileUploadPlugin/blueimp-gallery-video.css" rel="stylesheet" />
+<link href="~/css/fileUploadPlugin/blueimp-gallery-indicator.css" rel="stylesheet" />
+
+<script src="~/lib/jquery/dist/jquery.js"></script>
+
+    @Html.Partial("_Upload")
+    <script>
+        var $form = null;
+        $(function () {
+
+            $form = $('#fileupload').fileupload({
+                dataType: 'json'
+            });
+
+        });
+        $('#fileupload').addClass('fileupload-processing');
+    </script>
+
+
+    <script src="~/js/fileUploadPlugin/modernizr-2.6.2.js"></script>
+
+
+    @*<script src="~/js/fileUploadPlugin/jquery-2.1.4.js"></script>*@
+    <script src="~/js/fileUploadPlugin/respond.min.js"></script>
+    <script src="~/js/fileUploadPlugin/jquery-ui-1.11.4.min.js"></script>
+    <script src="~/js/fileUploadPlugin/jquery.ui.widget.js"></script>
+    <script src="~/js/fileUploadPlugin/tmpl.min.js"></script>
+    <script src="~/js/fileUploadPlugin/load-image.all.min.js"></script>
+    <script src="~/js/fileUploadPlugin/canvas-to-blob.min.js"></script>
+    <script src="~/js/fileUploadPlugin/jquery.iframe-transport.js"></script>
+
+    <script src="~/js/fileUploadPlugin/jquery.fileupload.js"></script>
+    <script src="~/js/fileUploadPlugin/jquery.fileupload-process.js"></script>
+    <script src="~/js/fileUploadPlugin/jquery.fileupload-image.js"></script>
+
+    <script src="~/js/fileUploadPlugin/jquery.validate.min.js"></script>
+    <script src="~/js/fileUploadPlugin/jquery.fileupload-audio.js"></script>
+    <script src="~/js/fileUploadPlugin/jquery.fileupload-video.js"></script>
+
+    <script src="~/js/fileUploadPlugin/jquery.fileupload-validate.js"></script>
+    <script src="~/js/fileUploadPlugin/jquery.fileupload-ui.js"></script>
+
+    @*<script src="~/js/fileUploadPlugin/demo.js"></script>*@
+
+    <script src="~/js/fileUploadPlugin/blueimp-gallery.min.js"></script>
+    <script src="~/js/fileUploadPlugin/blueimp-gallery-video.min.js"></script>
+    <script src="~/js/fileUploadPlugin/blueimp-gallery-indicator.min.js"></script>
+    <script src="~/js/fileUploadPlugin/jquery.blueimp-gallery.min.js"></script>
+
+
 <h4>Inserir anúncio</h4>
 
 <h2 align="center">O que você está anunciando?</h2>
 <hr />
+
+
+
 <div class="row">
     <div class="col-md-4">
         <form asp-action="Create">
@@ -18,9 +74,9 @@
                 <span asp-validation-for="T001_TITULO" class="text-danger"></span>
             </div>
             <div class="form-group">
-
                 <label asp-for="T001_DESCRICAO" class="control-label">DESCRIÇÃO</label>
-                @Html.TextArea("DESCRIÇÃO", new { rows = 10, cols = 40 })
+                @*@Html.TextArea("DESCRIÇÃO", new { rows = 10, cols = 40 })*@
+                <textarea asp-for="T001_DESCRICAO" class="form-control" rows="5" cols="33"></textarea>
                 <span asp-validation-for="T001_DESCRICAO" class="text-danger"></span>
             </div>
             <div class="form-group">
@@ -28,23 +84,30 @@
                 <input asp-for="T001_PRECO" class="form-control" />
                 <span asp-validation-for="T001_PRECO" class="text-danger"></span>
             </div>
+            @*<div class="form-group">
+                    <label asp-for="T001_FOTO" class="control-label"></label>
+                    <input asp-for="T001_FOTO" class="form-control" />
+                    <span asp-validation-for="T001_FOTO" class="text-danger"></span>
+                </div>*@
             <div class="form-group">
-                <label asp-for="T002_CATEGORIANavigation.T002_ID_CATEGORIA" class="control-label">CATEGORIA</label>
-                @Html.DropDownListFor(x => x.T002_CATEGORIANavigation.T002_NO_CATEGORIA, new SelectList(ViewBag.Categorias, "T002_ID_CATEGORIA", "T002_NO_CATEGORIA"))
+                <label asp-for="T003_ID_UF" class="control-label">UF</label>
+                <select asp-for="T003_ID_UF" class="form-control" asp-items="ViewBag.UFS"></select>
             </div>
-                @*<div class="form-group">
-            <label asp-for="T001_FOTO" class="control-label"></label>
-            <input asp-for="T001_FOTO" class="form-control" />
-            <span asp-validation-for="T001_FOTO" class="text-danger"></span>
-        </div>*@
-                <div class="form-group">
-                    <input type="file" accept=".png, .jpg, .jpeg" multiple />
-                    <img src="~/images/uploadButton.png" />
-                </div>
-                <div class="form-group">
-                    <input type="submit" value="Create" class="btn btn-default" />
-                </div>
-</form>
+            <div class="form-group">
+                <label asp-for="T002_ID_CATEGORIA" class="control-label">CATEGORIA</label>
+                <select asp-for="T002_ID_CATEGORIA" class="form-control" asp-items="ViewBag.CATEGORIAS"></select>
+            </div>
+
+            <div class="form-group">
+
+
+                @*<input type="file" accept=".png, .jpg, .jpeg" multiple />*@
+                <img src="~/images/uploadButton.png" />
+            </div>
+            <div class="form-group">
+                <input type="submit" value="Create" class="btn btn-default" />
+            </div>
+        </form>
     </div>
 </div>
 
@@ -52,6 +115,4 @@
     <a asp-action="Index">Back to List</a>
 </div>
 
-@section Scripts {
-    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
-}
+
