--- a/MDN/MDN/Views/Produto/Edit.cshtml
+++ b/MDN/MDN/Views/Produto/Edit.cshtml
@@ -34,6 +34,16 @@
                 <span asp-validation-for="T001_FOTO" class="text-danger"></span>
             </div>
             <div class="form-group">
+                <label asp-for="T003_ID_UF" class="control-label"></label>
+                <select asp-for="T003_ID_UF" class="form-control" asp-items="ViewBag.T003_ID_UF"></select>
+                <span asp-validation-for="T003_ID_UF" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="T002_ID_CATEGORIA" class="control-label"></label>
+                <select asp-for="T002_ID_CATEGORIA" class="form-control" asp-items="ViewBag.T002_ID_CATEGORIA"></select>
+                <span asp-validation-for="T002_ID_CATEGORIA" class="text-danger"></span>
+            </div>
+            <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-default" />
             </div>
         </form>
