--- a/MDN/MDN/Views/Produto/Index.cshtml
+++ b/MDN/MDN/Views/Produto/Index.cshtml
@@ -24,6 +24,12 @@
                 <th>
                     @Html.DisplayNameFor(model => model.T001_FOTO)
                 </th>
+            <th>
+                @Html.DisplayNameFor(model => model.T002_CATEGORIANavigation)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.T003_UFNavigation)
+            </th>
             <th></th>
         </tr>
     </thead>
@@ -41,6 +47,12 @@
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.T001_FOTO)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.T002_CATEGORIANavigation.T002_ID_CATEGORIA)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.T003_UFNavigation.T003_ID_UF)
             </td>
             <td>
                 <a asp-action="Edit" asp-route-id="@item.T001_ID_PRODUTO">Edit</a> |
