--- a/MDN/MDN/Views/Produto/Details.cshtml
+++ b/MDN/MDN/Views/Produto/Details.cshtml
@@ -1,54 +1,106 @@
-﻿@model MDN.Models.Entities.T001_PRODUTO
+﻿@model MDN.ViewModels.AnuncioVM
 
 @{
     ViewData["Title"] = "Details";
 }
 
-<h2>Details</h2>
+@*<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">*@
 
-<div>
-    <h4>T001_PRODUTO</h4>
-    <hr />
-    <dl class="dl-horizontal">
-        <dt>
-            @Html.DisplayNameFor(model => model.T001_TITULO)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.T001_TITULO)
-        </dd>
-        <dt>
-            @Html.DisplayNameFor(model => model.T001_DESCRICAO)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.T001_DESCRICAO)
-        </dd>
-        <dt>
-            @Html.DisplayNameFor(model => model.T001_PRECO)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.T001_PRECO)
-        </dd>
-        <dt>
-            @Html.DisplayNameFor(model => model.T001_FOTO)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.T001_FOTO)
-        </dd>
-        <dt>
-            @Html.DisplayNameFor(model => model.T002_CATEGORIANavigation)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.T002_CATEGORIANavigation.T002_ID_CATEGORIA)
-        </dd>
-        <dt>
-            @Html.DisplayNameFor(model => model.T003_UFNavigation)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.T003_UFNavigation.T003_ID_UF)
-        </dd>
-    </dl>
+<h2>@Model.Produto.T001_TITULO</h2>
+
+<div class="col-md-6">
+
+
+    <div id="myCarousel" class="carousel slide" data-ride="carousel" data-interval="6000">
+        <div class="carousel-inner" role="listbox">
+            @{int contador = 0; }
+            @foreach (var imagem in @Model.Imagens)
+            {
+                var caminho = "https://" + @Model.caminho + "/uploadImages/" + Model.Produto.T001_ID_PRODUTO + "/" + imagem.Name;
+
+                if (contador == 0)
+                {
+                    <div class="item active">
+                        <img  src="@caminho" alt="Primeiro Slide" class="img-responsive">
+                    </div>
+                }
+                if (contador != 0)
+                {
+                    <div class="item">
+                        <img  src="@caminho" alt="Segundo Slide" class="img-responsive">
+                    </div>
+                }
+                contador++;
+
+            }
+        </div>
+        <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
+            <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+            <span class="sr-only">Previous</span>
+        </a>
+        <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
+            <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+            <span class="sr-only">Next</span>
+        </a>
+    </div>
+    
 </div>
-<div>
-    <a asp-action="Edit" asp-route-id="@Model.T001_ID_PRODUTO">Edit</a> |
-    <a asp-action="Index">Back to List</a>
-</div>
+
+
+@*@foreach (var imagem in @Model.Imagens)
+    {
+        var caminho = "https://" + @Model.caminho + "/uploadImages/" + Model.Produto.T001_ID_PRODUTO + "/" + imagem.Name;
+        // var caminho = +"/" + imagem.Name;
+
+        <img src="@caminho"/>
+
+    }*@
+<div class="col-md-6">
+    <div>
+        <h4>T001_PRODUTO</h4>
+        <hr />
+        <dl class="dl-horizontal">
+            <dt>
+                @Html.DisplayNameFor(model => model.Produto.T001_TITULO)
+            </dt>
+            <dd>
+                @Html.DisplayFor(model => model.Produto.T001_TITULO)
+            </dd>
+            <dt>
+                @Html.DisplayNameFor(model => model.Produto.T001_DESCRICAO)
+            </dt>
+            <dd>
+                @Html.DisplayFor(model => model.Produto.T001_DESCRICAO)
+            </dd>
+            <dt>
+                @Html.DisplayNameFor(model => model.Produto.T001_PRECO)
+            </dt>
+            <dd>
+                @Html.DisplayFor(model => model.Produto.T001_PRECO)
+            </dd>
+            <dt>
+                @Html.DisplayNameFor(model => model.Produto.T002_CATEGORIANavigation)
+            </dt>
+            <dd>
+                @Html.DisplayFor(model => model.Produto.T002_CATEGORIANavigation.T002_ID_CATEGORIA)
+            </dd>
+            <dt>
+                @Html.DisplayNameFor(model => model.Produto.T003_UFNavigation)
+            </dt>
+            <dd>
+                @Html.DisplayFor(model => model.Produto.T003_UFNavigation.T003_ID_UF)
+            </dd>
+        </dl>
+    </div>
+    </div>
+    <div>
+        <a asp-action="Edit" asp-route-id="@Model.Produto.T001_ID_PRODUTO">Edit</a> |
+        <a asp-action="Index">Back to List</a>
+    </div>
+
+
+    @section Scripts {
+
+      @*<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>*@
+        <script>$('.carousel').carousel()</script>
+    }
