--- a/MDN/MDN/Views/Shared/_LoginPartial.cshtml
+++ b/MDN/MDN/Views/Shared/_LoginPartial.cshtml
@@ -8,6 +8,7 @@
 {
     <form asp-area="" asp-controller="Account" asp-action="Logout" method="post" id="logoutForm" class="navbar-right">
         <ul class="nav navbar-nav navbar-right">
+            <li style="background-color:orange"><a asp-area="" asp-controller="Produto" asp-action="Create">Anunciar</a></li>
             <li>
                 <a asp-area="" asp-controller="Manage" asp-action="Index" title="Manage">Hello @UserManager.GetUserName(User)!</a>
             </li>
@@ -20,6 +21,7 @@
 else
 {
     <ul class="nav navbar-nav navbar-right">
+        <li style="background-color:orange"><a asp-area="" asp-controller="Account" asp-action="Register">Anunciar</a></li>
         <li><a asp-area="" asp-controller="Account" asp-action="Register">Register</a></li>
         <li><a asp-area="" asp-controller="Account" asp-action="Login">Log in</a></li>
     </ul>
