--- a/MDN/MDN/Views/Produto/Index.cshtml
+++ b/MDN/MDN/Views/Produto/Index.cshtml
@@ -1,4 +1,5 @@
-﻿@model IEnumerable<MDN.Models.Entities.T001_PRODUTO>
+﻿@model List<MDN.ViewModels.AnuncioGridVM>
+
 
 @{
     ViewData["Title"] = "Index";
@@ -9,51 +10,53 @@
 <p>
     <a asp-action="Create">Create New</a>
 </p>
-<table class="table">
-    <thead>
-        <tr>
+
+@Html.Partial("_ItemGrid")
+@*<table class="table">
+        <thead>
+            <tr>
+                    <th>
+                        @Html.DisplayNameFor(model => model.T001_TITULO)
+                    </th>
+                    <th>
+                        @Html.DisplayNameFor(model => model.T001_DESCRICAO)
+                    </th>
+                    <th>
+                        @Html.DisplayNameFor(model => model.T001_PRECO)
+                    </th>
                 <th>
-                    @Html.DisplayNameFor(model => model.T001_TITULO)
+                    @Html.DisplayNameFor(model => model.T002_CATEGORIANavigation)
                 </th>
                 <th>
-                    @Html.DisplayNameFor(model => model.T001_DESCRICAO)
+                    @Html.DisplayNameFor(model => model.T003_UFNavigation)
                 </th>
-                <th>
-                    @Html.DisplayNameFor(model => model.T001_PRECO)
-                </th>
-            <th>
-                @Html.DisplayNameFor(model => model.T002_CATEGORIANavigation)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.T003_UFNavigation)
-            </th>
-            <th></th>
-        </tr>
-    </thead>
-    <tbody>
-@foreach (var item in Model) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.T001_TITULO)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.T001_DESCRICAO)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.T001_PRECO)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.T002_CATEGORIANavigation.T002_ID_CATEGORIA)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.T003_UFNavigation.T003_ID_UF)
-            </td>
-            <td>
-                <a asp-action="Edit" asp-route-id="@item.T001_ID_PRODUTO">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.T001_ID_PRODUTO">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.T001_ID_PRODUTO">Delete</a>
-            </td>
-        </tr>
-}
-    </tbody>
-</table>
+                <th></th>
+            </tr>
+        </thead>
+        <tbody>
+    @foreach (var item in Model) {
+            <tr>
+                <td>
+                    @Html.DisplayFor(modelItem => item.T001_TITULO)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.T001_DESCRICAO)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.T001_PRECO)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.T002_CATEGORIANavigation.T002_ID_CATEGORIA)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.T003_UFNavigation.T003_ID_UF)
+                </td>
+                <td>
+                    <a asp-action="Edit" asp-route-id="@item.T001_ID_PRODUTO">Edit</a> |
+                    <a asp-action="Details" asp-route-id="@item.T001_ID_PRODUTO">Details</a> |
+                    <a asp-action="Delete" asp-route-id="@item.T001_ID_PRODUTO">Delete</a>
+                </td>
+            </tr>
+    }
+        </tbody>
+    </table>*@
