--- a/MDN/MDN/Views/Produto/Details.cshtml
+++ b/MDN/MDN/Views/Produto/Details.cshtml
@@ -90,6 +90,15 @@
             @Html.DisplayFor(model => model.Produto.T001_DESCRICAO)
         </h4>
     </div>
+
+    <div>
+        <hr />
+
+        <h5>
+            @Html.DisplayFor(model => model.telefone)
+        </h5>
+    </div>
+
 </div>
 @*<div class="col-md-12">
     <a asp-action="Edit" asp-route-id="@Model.Produto.T001_ID_PRODUTO">Edit</a> |
