--- a/MDN/MDN/Views/Shared/_LoginPartial.cshtml
+++ b/MDN/MDN/Views/Shared/_LoginPartial.cshtml
@@ -8,6 +8,7 @@
 {
     <form asp-area="" asp-controller="Account" asp-action="Logout" method="post" id="logoutForm" class="navbar-right">
         <ul class="nav navbar-nav navbar-right">
+            <li style="background-color:white ; margin-right: 5px"><a asp-area="" asp-controller="Produto" asp-action="MeusAnuncios" style="color: orange">Meus Anuncios</a></li>
             <li style="background-color:orange"><a asp-area="" asp-controller="Produto" asp-action="Create">Anunciar</a></li>
             <li>
                 <a asp-area="" asp-controller="Manage" asp-action="Index" title="Manage">Hello @UserManager.GetUserName(User)!</a>
